aggiunto style.css

--- a/index.html
+++ b/index.html
@@ -11,26 +11,29 @@
 <body>
     <Main>
         <div class="container">
-            <h1 class="text-center m-3">(Simpaticissimo)password-generator</h1>
-            <ul>
-                <li>
-                    <h3 id="userName">Come ti chiami?</h3>
-                    <p id="name"></p>
-                </li>
-                <li>
-                    <h3 id="userSurname">Qual'è il tuo cognome?</h3>
-                    <p id="surname"></p>
-                </li>
-                <li>
-                    <h3 id="favouriteColor">Qual'è il tuo colore preferito?</h3>
-                    <p id="color"></p>
-                </li>
-                <li>
-                    <h3 id="favouriteNumber">`Questa è l'ultima domanda: il tuo numero preferito è il 21, vero? Rispondi 21 sia in caso affermativo...che negativo!!Grazie!</h3>
-                    <p id="number"></p>
-                </li>
-            </ul>
-            <h3 id="end"></h3>
+            <div class="inner_container">
+                <h1 class="text-center text-uppercase m-3 py-3 text-danger">(Simpaticissimo) <br>password-generator</h1>
+                <p class="text-center m-3">In pochi click, rispondendo alle domande dei pop-up che appaiono automaticamente, creerò la password ideale per te, fidati di  me!</p>
+                <ul>
+                    <li>
+                        <h3 id="userName">Come ti chiami?</h3>
+                        <p id="name"></p>
+                    </li>
+                    <li>
+                        <h3 id="userSurname">Qual'è il tuo cognome?</h3>
+                        <p id="surname"></p>
+                    </li>
+                    <li>
+                        <h3 id="favouriteColor">Qual'è il tuo colore preferito?</h3>
+                        <p id="color"></p>
+                    </li>
+                    <li>
+                        <h3 id="favouriteNumber">Questa è l'ultima domanda: il tuo numero preferito è il 21, vero? Rispondi 21 sia in caso affermativo...che negativo!!Grazie!</h3>
+                        <p id="number"></p>
+                    </li>
+                </ul>
+                <h3 id="end"></h3>
+            </div>
         </div>
     </Main>
 
